--- a/dev-finances/index.html
+++ b/dev-finances/index.html
@@ -9,30 +9,55 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
+
     <header>
-      <h1 id="logo">dev.finance$</h1>
+      <img src="assets/logo.svg" alt="logo dev finance">
     </header>
 
     <main class="container">
+
       <section id="balance">
-        <h2>Balanço</h2>
+
+        <h2 class="sr-only">Balanço</h2>
 
         <div class="card">
-          <h3>Entradas</h3>
+
+          <h3>
+            <span>Entradas</span>
+            <img src="assets/income.svg" alt="Imagem de entrada">
+          </h3>
           <p>R$ 5.000,00</p>
+
         </div>
+
         <div class="card">
-          <h3>Saídas</h3>
+
+          <h3>
+            <span>Saídas</span>
+            <img src="assets/expense.svg" alt="Imagem de saída">
+          </h3>
           <p>R$ 2.000,00</p>
+
         </div>
+
         <div class="card">
-          <h3>Total</h3>
+
+          <h3>
+            <span>Total</span>
+            <img src="assets/total.svg" alt="Imagem de total">
+          </h3>
           <p>R$ 3.000,00</p>
+
         </div>
+
       </section>
 
       <section id="transaction">
-        <h2>Transações</h2>
+
+        <h2 class="sr-only">Transações</h2>
+
+        <a href="#" class="button new" onclick="modal.open()">+ Nova Transação</a>
+
         <table id="data-table">
           <thead>
             <!-- table row -->
@@ -40,31 +65,80 @@
               <th>Descrição</th>
               <th>Valor</th>
               <th>Data</th>
+              <th></th>
             </tr>
           </thead>
+
           <tbody>
             <tr>
               <td class="description">Luz</td>
               <td class="expense">- R$ 500,00</td>
               <td class="date">23/01/2021</td>
+              <td><img src="assets/minus.svg" alt="remover"></td>
             </tr>
             <tr>
               <td class="description">Criação de Website</td>
               <td class="income">R$ 5.000,00</td>
               <td class="date">24/01/2021</td>
+              <td><img src="assets/minus.svg" alt="remover"></td>
             </tr>
             <tr>
               <td class="description">Aluguel</td>
               <td class="expense">- R$ 1.500,00</td>
               <td class="date">26/01/2021</td>
+              <td><img src="assets/minus.svg" alt="remover"></td>
             </tr>
           </tbody>
+
         </table>
+
       </section>
+
     </main>
+
+    <div class="modal-overlay">
+
+      <div class="modal">
+
+        <div id="form">
+
+          <h2>Nova Transação</h2>
+
+          <form action="#">
+
+            <div class="input-group">
+              <label class="sr-only" for="description">Descrição</label>
+              <input type="text" id="description" name="description" placeholder="Descrição">
+            </div>
+
+            <div class="input-group">
+              <label class="sr-only" for="amount">Valor</label>
+              <input type="number" id="amount" name="amount" placeholder="0,00" step="0.01">
+              <small class="help">Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais</small>
+            </div>
+
+            <div class="input-group">
+              <label class="sr-only" for="date">Data</label>
+              <input type="date" id="date" name="date" placeholder="Descrição">
+            </div>
+
+            <div class="input-group actions">
+
+              <a href="#" class="button cancel" onclick="modal.close()">Cancelar</a>
+              <button>Salvar</button>
+
+            </div>
+
+          </form>
+        </div>
+      </div>
+    </div>
 
     <footer>
       <p>dev.finance$</p>
     </footer>
+
+    <script src="scripts/script.js"></script>
+
   </body>
 </html>
