--- a/dev-finances/index.html
+++ b/dev-finances/index.html
@@ -26,7 +26,7 @@
             <span>Entradas</span>
             <img src="assets/income.svg" alt="Imagem de entrada">
           </h3>
-          <p>R$ 5.000,00</p>
+          <p id="incomeDisplay">R$ 0,00</p>
 
         </div>
 
@@ -36,7 +36,7 @@
             <span>Saídas</span>
             <img src="assets/expense.svg" alt="Imagem de saída">
           </h3>
-          <p>R$ 2.000,00</p>
+          <p id="expenseDisplay">R$ 0,00</p>
 
         </div>
 
@@ -46,7 +46,7 @@
             <span>Total</span>
             <img src="assets/total.svg" alt="Imagem de total">
           </h3>
-          <p>R$ 3.000,00</p>
+          <p id="totalDisplay">R$ 0,00</p>
 
         </div>
 
@@ -70,24 +70,7 @@
           </thead>
 
           <tbody>
-            <tr>
-              <td class="description">Luz</td>
-              <td class="expense">- R$ 500,00</td>
-              <td class="date">23/01/2021</td>
-              <td><img src="assets/minus.svg" alt="remover"></td>
-            </tr>
-            <tr>
-              <td class="description">Criação de Website</td>
-              <td class="income">R$ 5.000,00</td>
-              <td class="date">24/01/2021</td>
-              <td><img src="assets/minus.svg" alt="remover"></td>
-            </tr>
-            <tr>
-              <td class="description">Aluguel</td>
-              <td class="expense">- R$ 1.500,00</td>
-              <td class="date">26/01/2021</td>
-              <td><img src="assets/minus.svg" alt="remover"></td>
-            </tr>
+            
           </tbody>
 
         </table>
@@ -104,7 +87,7 @@
 
           <h2>Nova Transação</h2>
 
-          <form action="#">
+          <form action="" onsubmit="Form.submit(event)">
 
             <div class="input-group">
               <label class="sr-only" for="description">Descrição</label>
